--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     text-align: center;
     /* 1. ตั้งค่าพื้นหลัง: ใช้พื้นหลัง fixed เพื่อให้ครอบคลุมทั้งหน้าจอ */
     background-color: #f0f0f0;
-    background-image: url(https://github.com/Wattana-rgb/image-2.jpg'); 
+    background-image: url(School/2.jpg'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed; /* **สำคัญ:** ทำให้พื้นหลังยึดติดและครอบคลุมเวลาเลื่อน */
@@ -166,7 +166,7 @@ body::before {
 
     <div class="slider-container">
         <div class="slider-wrapper" id="imageSlider">
-            <img src="Show/01.png" alt="ภาพกิจกรรม 1" />
+            <img src="Scool01.png" alt="ภาพกิจกรรม 1" />
             <img src="Show/02.jpg" alt="ภาพกิจกรรม 2" />
             <img src="Show/03.jpg" alt="ภาพกิจกรรม 3" />
         </div>
@@ -246,5 +246,6 @@ body::before {
 </body>
 
 </html>
+
 
 
