--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     text-align: center;
     /* 1. ตั้งค่าพื้นหลัง: ใช้พื้นหลัง fixed เพื่อให้ครอบคลุมทั้งหน้าจอ */
     background-color: #f0f0f0;
-    background-image: url('School/images/images/2.jpg'); 
+    background-image: url('School/images/01.png'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed; /* **สำคัญ:** ทำให้พื้นหลังยึดติดและครอบคลุมเวลาเลื่อน */
@@ -246,6 +246,7 @@ body::before {
 </body>
 
 </html>
+
 
 
 
